# blog-program

./: .gitignore  .gitmodules  Anchor.toml  Cargo.toml
frontend/dioxus-blog/: Cargo.toml  Dioxus.toml  package-lock.json  package.json
frontend/dioxus-blog/assets/: tailwind.css
frontend/dioxus-blog/src/: main.rs
frontend/dioxus-blog/src/apis/: mod.rs
frontend/dioxus-blog/src/components/: blog_content.rs  header.rs  mod.rs  nav_bar.rs
frontend/dioxus-blog/src/contexts/: mod.rs  rpc_provider.rs  wallet_provider.rs
frontend/dioxus-blog/src/pages/: blog.rs  home.rs  mod.rs
programs/web3-blog-program/: Cargo.toml
programs/web3-blog-program/src/: error.rs  instructions.rs  lib.rs  state.rs
programs/web3-blog-program/src/instructions/: add_author.rs  create_blog.rs  init.rs  initialize.rs  update_author.rs  update_blog.rs
programs/web3-blog-program/src/state/: author.rs  author_list.rs  blog_list.rs  blog_metadata.rs
tests/: Cargo.toml
tests/src/: test_initialize.rs
